2006-07-13  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.spec.in: Add formerly missing admonitional verb.

2006-07-13  David Smith  <dsmith@redhat.com>

	* parse.cxx (parser::expect_unknown2): New function that looks for
	2 possible token types.
	* parse.cxx (parser::expect_ident_or_keyword): New function that
	calls parser::expect_unknown2.
	* parse.cxx (parser::parse_symbol): Calls
	parser::expect_ident_or_keyword to allow keywords to appear when
	expanding target symbols (Bugzilla #2913).
	* parse.h: Added prototypes for parser::expect_unknown2 and
	parser::expect_ident_or_keyword.
	* testsuite/parseok/seventeen.stp: New test to check for allowing
	keywords when expanding target symbols.

2006-06-30  Josh Stone  <joshua.i.stone@intel.com>

	* tapsets.cxx (hrtimer_builder::build): Enable hrtimers on >=2.6.17.
	* tapsets.cxx (hrtimer_derived_probe::emit_probe_entries): Correct
	compilation errors, fix return value.

2006-06-30  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (dwflpp::dwfl_assert): Added optional extra_msg
	parameter to be able to print out extra error message.
	(dwflpp::setup): Uses new 'extra_msg' parameter to dwfl_assert()
	to ask user to install kernel-debuginfo when
	dwfl_linux_kernel_report_kernel() or
	dwfl_linux_kernel_report_modules() fails (Bugzilla #2669).
	
	* buildrun.cxx (compile_pass): Checks to make sure module build
	directory exists before trying to run make there (Bugzilla #2669).

2006-06-27  Roland McGrath  <roland@redhat.com>

	* runtest.sh: Don't use eval, use proper quoting.

	* tapsets.cxx (dwflpp::emit_address): New instance method.  Get
	relocation details from Dwfl to emit in comment after address constant.
	(dwflpp::loc2c_emit_address): Just call that.

2006-06-26  Li Guanglei <guanglei@cn.ibm.com>

	* lket.in.5: update to AIO event hooks

2006-06-23  Thang P Nguyen  <thang.p.nguyen@intel.com>

	* testsuite/buildok/tcp_test.stp: updated inet calls
	* testsuite/buildok/udp_test.stp: test udp tapset
