@@ -140,10 +140,16 @@ main (int argc, char * const argv [])
   s.merge=true;
 
   const char* s_p = getenv ("SYSTEMTAP_TAPSET");
-  if (s_p != NULL)
+  if (s_p != NULL)  
+  {
     s.include_path.push_back (s_p);
+    s.include_path.push_back (string(s_p) + "/LKET");
+  }
   else
+  {
     s.include_path.push_back (string(PKGDATADIR) + "/tapset");
+    s.include_path.push_back (string(PKGDATADIR) + "/tapset/LKET");
+  }
 
   const char* s_r = getenv ("SYSTEMTAP_RUNTIME");
   if (s_r != NULL)
