@@ -984,20 +984,6 @@ probe syscall.compat_sys_socketcall.return =
 	retstr = returnstr(1)
 }
 
-
-# acct _______________________________________________________
-# long sys_acct(const char __user *name)
-
-probe syscall.acct = kernel.function("sys_acct") ? {
-	name = "acct"
-        filename = user_string($name)
-	argstr = filename
-}
-probe syscall.acct.return = kernel.function("sys_acct").return ? {
-	name = "acct"
-	retstr = returnstr(1)
-}
-
 #sys32_open _______________________________________________________
 # asmlinkage long sys32_open(const char * filename, int flags, int mode)
 probe syscall.sys32_open = kernel.function("sys32_open") ? {
@@ -1082,25 +1068,6 @@ probe syscall.ppc_rtas.return = kernel.function("ppc_rtas").return {
 #
 # These system calls i(to eof) are removed in kernel version > 2.6.9
 #
-# add_key ____________________________________________________
-# long sys_add_key(const char __user *_type,
-#             const char __user *_description,
-#             const void __user *_payload,
-#             size_t plen,
-#             key_serial_t ringid)
-probe syscall.add_key = kernel.function("sys_add_key") ? {
-	name = "add_key"
-	type_uaddr = $_type
-	description_auddr = $_description
-	payload_uaddr = $_payload
-	plen = $plen
-	ringid = $ringid
-	argstr = "add_key"
-}
-probe syscall.add_key.return = kernel.function("sys_add_key").return ? {
-	name = "add_key"
-	retstr = returnstr(1)
-}
 
 # quotactl ___________________________________________________
 #
@@ -1145,22 +1112,6 @@ probe syscall.request_key.return = kernel.function("sys_request_key").return ? {
 	name = "request_key"
 	retstr = returnstr(1)
 }
-# umask ______________________________________________________
-#
-# asmlinkage long
-# sys_umask(int mask)
-# 
-probe syscall.umask = kernel.function("sys_umask") ? {
-	name = "umask"
-	mask = $mask
-	argstr = sprintf("%#o", $mask)
-}
-probe syscall.umask.return =
-	kernel.function("sys_umask").return {
-	name = "umask"
-	retstr = returnstr(3)
-}
-
 
 # sys32_execve ________________________________________
 #
